methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
  var bg = false;
  for(i<-1 to 7){
  if(estSurBiscuit()){
    bg=true;
  }
  avanche();
}
 if(estSurBiscuit()){
    bg=true;
  }
  return bg;
}